# MyCppAppTemplate

./: .travis.yml  CMakeLists.txt  Readme.md
src/: Main.cpp
